Issue #3109198 by agami4: Fix display tab options on the search page on mobile mode

--- a/themes/socialblue/components/05-templates/layout/layout--sky.scss
+++ b/themes/socialblue/components/05-templates/layout/layout--sky.scss
@@ -23,9 +23,7 @@
     }
   }
   .region--secondary-navigation {
-    @include for-tablet-landscape-up {
-      width: 100%;
-    }
+    width: 100%;
   }
 
 
